errors_and_output.txt
  File "C:\Users\Antho\temp.py", line 49
    continue
    ^^^^^^^^
SyntaxError: 'continue' not properly in loop
